# xyscope

./: .gitignore  .xyscope.mm.swp  .xyscope.pref  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile-windows  Dockerfile.windows  Makefile  README.md  README.txt  README_XYSCOPE.md  build-linux.sh  build-windows.sh  build.sh  build_windows.sh  clean.sh  cp.sh  default.pa  docker-entrypoint-windows.sh  docker-entrypoint.sh  dri.txt  drm.txt  gui.sh  install.sh  make.sh  monitor  monitor.cpp  run.sh  run2.sh  shell.sh  winmain.c  xyscope  xyscope-1.0.1.cpp  xyscope-audio.h  xyscope-bloom.h  xyscope-calibrate.c  xyscope-calibrate.mm  xyscope-compat.h  xyscope-draw.h  (+9 more)
XYScope.app/Contents/: Info.plist
XYScope.app/Contents/MacOS/: XYScope  xyscope-bin
XYScope.app/Contents/Resources/: XYScope.command
XYScope.app/Contents/Resources/XYScope.driver/Contents/: Info.plist
XYScope.app/Contents/Resources/XYScope.driver/Contents/MacOS/: XYScope
config/pipewire/client.conf.d/: 00-default_properties.conf
config/pipewire/pipewire.conf.d/: 00-base.conf
driver/: BlackHole.c  BlackHole.plist  Makefile
resources/: Info.plist  XYScope.command  install.sh
